# butterfly

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.am  README.md  butterfly.html  configure.ac  test
java/src/: all_attacks.java  all_items.java  all_spares.java  char_data.java  cursed_backend.java  hypersurf.java  ingame.java  main.java  record_management.java  save_management.java  splash.java  tools.java  visuals.java
lic/: FUNCS_MIT.md  FUNCS_MIT.txt  MIT.txt
patches/: build_clang.patch  clang_make.patch  non_linux.patch
save/: data.txt
src/: main.rs  nommes.rs
src/base/: action.c  action.cpp  controller.c  gdata.c  gtool.c  gtool.cpp  joystick.c  main.c  main.cpp  record_io.c  record_io.cpp  save_io.c  save_io.cpp  screen.c  screen.cpp  stat_gen.c  stat_gen.cpp  tool.c  tool.cpp  wires.c
src/batteries/: mod.rs
src/disp_submods/: mod.rs
src/header/: action.h  action.hpp  controller.h  defz.h  gdata.h  gtool.h  gtool.hpp  joystick.h  record_io.hpp  save_io.h  screen.h  screen.hpp  selections.h  stat_gen.h  stat_gen.hpp  tool.hpp  wires.h
src/interacters/: .options.rs.kate-swp  board.rs  mod.rs  options.rs  splash.rs
src/master_display/: gaming_display.rs  mod.rs
src/routine/: batteries.rs
