[package]
name = "draumaz-butterfly"
version = "0.16.2"
description = "A fantasy-adventure text battle game!"
homepage = "https://github.com/draumaz/butterfly"
license = "GPL-3.0 AND MIT"
keywords = ["game"]
categories = ["games"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savesys = "3.5.9"
rand = "0.8.5"

[dependencies.pancurses]
version = "0.17"
features = ["win32"]
