[package]
name = "draumaz-butterfly"
version = "0.16.5"
description = "A fantasy-adventure text battle game!"
homepage = "https://git.goatopossum.com/draumaz/butterfly"
license = "MIT"
keywords = ["game"]
categories = ["games"]

edition = "2018"

[dependencies]
savesys = "3.5.10"
rand = "0.8.5"

[dependencies.pancurses]
version = "0.17"
features = ["win32"]
